[gd_scene load_steps=3 format=3 uid="uid://2w6oxn3bv14u"]

[ext_resource type="PackedScene" uid="uid://dgygkbtm0burn" path="res://arena/addons/quiver_leaderboards/leaderboard_ui.tscn" id="1_5uv32"]
[ext_resource type="Script" path="res://arena/Leaderboard_Scene/leaderboard.gd" id="1_c4uh2"]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c4uh2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 360.0
offset_right = 17.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
visible = false
layout_mode = 2

[node name="LeaderBoard" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 260.0
offset_right = 68.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
text = "Leaderboard"

[node name="LeaderboardUI" parent="." instance=ExtResource("1_5uv32")]
visible = false
layout_mode = 1
script = null

[node name="Close" type="Button" parent="LeaderboardUI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Close"

[connection signal="text_submitted" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="LeaderBoard" to="." method="_on_leader_board_pressed"]
[connection signal="pressed" from="LeaderboardUI/Close" to="." method="_on_close_pressed"]
